[project]
name = "ticketanalysis"
version = "0.3.0"
description = ""
authors = [
    {name = "david doit", email = "david@doit-intl.com"},
]
dependencies = [
    "requests==2.24.0",
    "google-cloud-core==1.3.0",
    "google-cloud-storage==1.30.0",
    "Flask==1.1.2",
    "gunicorn==20.0.4",
    "google-cloud-secret-manager<3.0.0,>=2.2.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPLv3"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint~=2.8",
    "black~=21.5b0",
    "debugpy~=1.3",
    "coverage~=5.5",
    "mypy<1.0,>=0.812",
]

